adding superset configuration for dashboard embedding and react component to display embedding

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -28,7 +28,9 @@
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"@superset-ui/embedded-sdk": "0.1.0-alpha.12",
+		"axios": "1.7.4"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
