--- a/app/client/package.json
+++ b/app/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
+		"@nextui-org/dropdown": "2.1.29",
 		"@nextui-org/input": "2.2.4",
 		"@nextui-org/kbd": "2.0.33",
 		"@nextui-org/link": "2.0.34",
