--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -9,6 +9,8 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		// "react-latex-next": "3.0.0",
+		"react-cv": "1.6.0",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/dropdown": "2.1.29",
