--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"react-cv": "1.6.0",
 		"@nextui-org/button": "2.0.37",
+		"@nextui-org/card": "2.0.33",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/dropdown": "2.1.29",
 		"@nextui-org/input": "2.2.4",
@@ -18,10 +19,12 @@
 		"@nextui-org/link": "2.0.34",
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
+		"@nextui-org/scroll-shadow": "2.1.19",
 		"@nextui-org/spacer": "2.0.32",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
+		"@nextui-org/tabs": "2.0.35",
 		"@nextui-org/theme": "2.2.9",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
