converted sub-navbar into Tabbed window selection

--- a/web-app/client/Dockerfile
+++ b/web-app/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN npm install && npm run build
+RUN npm install && npm run build --legacy-peer-deps
 
 # Production image
 FROM node:18-alpine AS runner
