--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -37,6 +37,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"@superset-ui/embedded-sdk": "0.1.0-alpha.12",
+		"markdown-to-jsx": "7.5.0",
+		"rehype-raw": "7.0.0",
 		"axios": "1.7.4"
 	},
 	"devDependencies": {
