--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -26,6 +26,7 @@
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/tabs": "2.0.35",
 		"@nextui-org/theme": "2.2.9",
+		"@nextui-org/tooltip": "2.0.39",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
