styling and navigation org

--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -27,6 +27,7 @@
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/tabs": "2.0.35",
 		"@nextui-org/theme": "2.2.9",
+		"@nextui-org/tooltip": "2.0.39",
 		"@nextui-org/react": "2.4.6",
 		"@nextui-org/tooltip": "2.0.39",
 		"@react-aria/ssr": "3.9.4",
